fixed builder issues

--- a/exploration/exploring.ipynb
+++ b/exploration/exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4d0df13c-9bc8-4ad3-975f-85c7278a723a",
    "metadata": {
     "tags": []
@@ -12,7 +12,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm loaded\n"
+      "found duplicate\n",
+      "length of vars to be dropped: 3\n",
+      "Index(['Quarter', 'DayOfWeek', 'FlightDate', 'Marketing_Airline_Network',\n",
+      "       'Operated_or_Branded_Code_Share_Partners', 'DOT_ID_Marketing_Airline',\n",
+      "       'IATA_Code_Marketing_Airline', 'Flight_Number_Marketing_Airline',\n",
+      "       'Originally_Scheduled_Code_Share_Airline',\n",
+      "       'DOT_ID_Originally_Scheduled_Code_Share_Airline',\n",
+      "       ...\n",
+      "       'Dest_TYS', 'Dest_UIN', 'Dest_USA', 'Dest_VLD', 'Dest_VPS', 'Dest_WRG',\n",
+      "       'Dest_XNA', 'Dest_YAK', 'Dest_YKM', 'Dest_YNG'],\n",
+      "      dtype='object', length=745)\n",
+      "made it past that stupid thing\n",
+      "Index(['Quarter', 'DayOfWeek', 'FlightDate', 'Marketing_Airline_Network',\n",
+      "       'Operated_or_Branded_Code_Share_Partners', 'DOT_ID_Marketing_Airline',\n",
+      "       'IATA_Code_Marketing_Airline', 'Flight_Number_Marketing_Airline',\n",
+      "       'Originally_Scheduled_Code_Share_Airline',\n",
+      "       'DOT_ID_Originally_Scheduled_Code_Share_Airline',\n",
+      "       ...\n",
+      "       'Dest_TYS', 'Dest_UIN', 'Dest_USA', 'Dest_VLD', 'Dest_VPS', 'Dest_WRG',\n",
+      "       'Dest_XNA', 'Dest_YAK', 'Dest_YKM', 'Dest_YNG'],\n",
+      "      dtype='object', length=744)\n"
      ]
     }
    ],
@@ -20,203 +40,18 @@
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
-    "# from sqlalchemy import create_engine, URL, MetaData\n",
-    "# import scipy.io\n",
-    "\n",
-    "# test_file = '/app/res/test.csv'\n",
-    "\n",
-    "# file = '../../res/Combined_Flights_2021.parquet'\n",
-    "# file = './res/Combined_Flights_2021.parquet'\n",
-    "test_file = '/app/raw/Flights_2018_1.csv'\n",
-    "# csv_file = pd.read_csv(file_2022_6, engine='pyarrow')\n",
-    "# print(list(csv_file.columns))\n",
-    "# for line in list(csv_file.columns):\n",
-    "#     print(line)\n",
-    "sample = pd.read_csv(test_file, engine='pyarrow')\n",
-    "print(\"I'm loaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "1204128a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    index  Year  Month  DayofMonth\n",
-      "0       0  2018      1          23\n",
-      "1       1  2018      1          24\n",
-      "2       2  2018      1          25\n",
-      "3       3  2018      1          26\n",
-      "4       4  2018      1          27\n",
-      "..    ...   ...    ...         ...\n",
-      "95     95  2018      1           6\n",
-      "96     96  2018      1          13\n",
-      "97     97  2018      1          14\n",
-      "98     98  2018      1          20\n",
-      "99     99  2018      1          27\n",
-      "\n",
-      "[100 rows x 4 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# testing sql connection\n",
+    "from final_project import builder, loader\n",
     "\n",
     "\n",
-    "import psycopg2\n",
+    "# df = loader.get_df(file=\"Flights_2018_1.csv\")\n",
+    "# # print(df.columns)\n",
+    "# # df.head()\n",
+    "# # dfs = builder.columnManager(df)\n",
+    "# if 'Duplicate' in df.columns:\n",
+    "#     print(\"found duplicate\")\n",
     "\n",
-    "from dotenv import load_dotenv\n",
-    "from pathlib import Path\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy.sql import text\n",
-    "from sqlalchemy.engine.url import URL\n",
-    "\n",
-    "load_dotenv(Path.cwd() / \".env\")\n",
-    "server_creds = {\n",
-    "    \"drivername\": \"postgresql+psycopg2\",\n",
-    "    # \"host\": os.getenv(\"PG_HOST\"),\n",
-    "    \"host\": \"flights-db\",\n",
-    "    \"port\": os.getenv(\"PG_PORT\"),\n",
-    "    \"database\": os.getenv(\"PG_DATABASE\"),\n",
-    "    \"username\": os.getenv(\"PG_ADMIN\"),\n",
-    "    \"password\": os.getenv(\"PG_ADMIN_PASSWORD\"),\n",
-    "}\n",
-    "server_url = URL.create(**server_creds)\n",
-    "try:\n",
-    "    db = create_engine(server_url)\n",
-    "    query = \"SELECT * FROM flights LIMIT 10\"\n",
-    "    with db.connect() as conn:\n",
-    "        query = conn.execute(text(query))\n",
-    "        df = pd.DataFrame(query.fetchall())\n",
-    "except (Exception, psycopg2.DatabaseError) as error:\n",
-    "    print(error)\n",
-    "print(df)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "4807d8cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# unfortunately, %sql provided for ipython-sql is not working atm\n",
-    "# print(server_url)\n",
-    "# %sql postgresql://postgres:postgres@flights-db:5432/flights_db\n",
-    "# %sql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "49b11ff2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "457688\n"
-     ]
-    }
-   ],
-   "source": [
-    "# sample = csv_file.sample(n = 100000)\n",
-    "# sample.to_csv(\"../../res/test.csv\", index=False)\n",
-    "print(len(sample.index))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "93bf80b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18149\n"
-     ]
-    }
-   ],
-   "source": [
-    "#get all the flights in the first file that either depart from or arrive to boston\n",
-    "bos_sample = sample.query('Origin == \"BOS\" or Dest == \"BOS\"')\n",
-    "#print the number of flights from or to boston \n",
-    "print(len(bos_sample.index))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "555aed6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#what is the average delay time for the flights from boston"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9a96e7bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2018 1 1 5 5 datetime.date(2018, 1, 5) 'B6' 'B6' 20409 'B6' 797 '' nan\n",
-      "  '' nan 'B6' 20409 'B6' 'N663JB' 797 10721 1072102 30721 'BOS'\n",
-      "  'Boston, MA' 'MA' 25 'Massachusetts' 13 10397 1039707 30397 'ATL'\n",
-      "  'Atlanta, GA' 'GA' 13 'Georgia' 34 1607 1902.0 175.0 175.0 1.0 11.0\n",
-      "  '1600-1659' 29.0 1931.0 2150.0 8.0 1907 2158.0 171.0 171.0 1.0 11.0\n",
-      "  '1900-1959' 0.0 '' 0.0 180.0 176.0 139.0 1.0 946.0 4 171.0 0.0 0.0 0.0\n",
-      "  0.0 nan nan nan 0 nan nan nan nan '' nan nan nan nan nan nan '' '' nan\n",
-      "  nan nan nan nan nan '' None None None None None None None None None\n",
-      "  None None None None None None None None None None None None None None\n",
-      "  None 'N' None]\n",
-      " [2018 1 1 10 3 datetime.date(2018, 1, 10) 'B6' 'B6' 20409 'B6' 504 ''\n",
-      "  nan '' nan 'B6' 20409 'B6' 'N629JB' 504 12954 1295406 32575 'LGB'\n",
-      "  'Long Beach, CA' 'CA' 6 'California' 91 10721 1072102 30721 'BOS'\n",
-      "  'Boston, MA' 'MA' 25 'Massachusetts' 13 2115 2116.0 1.0 1.0 0.0 0.0\n",
-      "  '2100-2159' 9.0 2125.0 517.0 5.0 529 522.0 -7.0 0.0 0.0 -1.0\n",
-      "  '0001-0559' 0.0 '' 0.0 314.0 306.0 292.0 1.0 2602.0 11 nan nan nan nan\n",
-      "  nan nan nan nan 0 nan nan nan nan '' nan nan nan nan nan nan '' '' nan\n",
-      "  nan nan nan nan nan '' None None None None None None None None None\n",
-      "  None None None None None None None None None None None None None None\n",
-      "  None 'N' None]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "bos = sample.query('Origin == \"BOS\" or Dest == \"BOS\"').to_numpy()\n",
-    "# sample['Origin']\n",
-    "# sample['OriginAirportSeqID']\n",
-    "print(bos[0:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22198dd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# file = open(\"/app/raw/Flights_2018_1.csv\")\n",
-    "# print(file.readline())\n",
-    "# print(file.readline())\n",
-    "# bos = file[np.where(OriginAirportID == \"BOS\")]\n",
-    "# print(bos)\n",
-    "\n",
-    "# for i in file:\n",
-    "#     print(i)\n",
+    "# dfs = builder.encodeFrame(df)\n",
+    "# print(dfs.columns)\n",
     "\n",
     "\n"
    ]
@@ -224,56 +59,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d62969",
+   "id": "1601ce87",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# file_csv = '../../res/Combined_Flights_2021.csv'\n",
-    "# for line in list(pq_file.columns):\n",
-    "#     print(line)\n",
-    "# print(csv_file.columns)\n",
-    "\n",
-    "# pd.read_csv(file_csv)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0f1ff742",
+   "execution_count": null,
+   "id": "7618312a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 'testing'), (2, 'today')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#testing the postgresql server\n",
-    "# url_object = URL.create(\n",
-    "#     \"postgresql+psycopg2\",\n",
-    "#     username=\"postgres\",\n",
-    "#     password=\"postgres\",\n",
-    "#     host=\"flights-db\",\n",
-    "#     port=\"5432\",\n",
-    "#     database=\"flights\"\n",
-    "# )\n",
-    "\n",
-    "# db = create_engine(url_object)k\n",
-    "\n",
-    "# with db.connect() as conn:\n",
-    "#     s = \n",
-    "    # for row in conn.execute()\n",
-    "\n",
-    "conn_string = \"host='flights-db' dbname='flights' user='postgres' password='postgres'\"\n",
-    "with psycopg2.connect(conn_string) as conn:\n",
-    "    cursor = conn.cursor()\n",
-    "    cursor.execute(\"SELECT * FROM demo\")\n",
-    "    records = cursor.fetchall()\n",
-    "    print(records)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -292,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
