made pretty charts in RunEDA

--- a/exploration/exploring.ipynb
+++ b/exploration/exploring.ipynb
@@ -15,10 +15,12 @@
     "from final_project import builder, loader\n",
     "\n",
     "\n",
-    "# df = loader.get_df(file=\"Flights_2018_1.csv\")\n",
+    "df = loader.get_df(file=\"Flights_2018_1.csv\")\n",
     "# # print(df.columns)\n",
     "# # df.head()\n",
-    "# # dfs = builder.columnManager(df)\n",
+    "dfs = builder.columnManager(df)\n",
+    "builder.airlineAnalysis(dfs)\n",
+    "\n",
     "# if 'Duplicate' in df.columns:\n",
     "#     print(\"found duplicate\")\n",
     "\n",
