getting cleanup before merging

--- a/exploration/test.ipynb
+++ b/exploration/test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,31 +82,31 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n",
-      "[CV 1/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
-      "[CV 1/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "[CV 3/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear[CV 2/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "\n",
-      "[CV 2/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
-      "[CV 1/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
-      "[CV 3/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
       "[CV 2/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
+      "[CV 3/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
+      "[CV 1/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
       "[CV 2/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
       "[CV 3/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "[CV 3/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
       "[CV 1/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "[CV 1/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=   6.6s\n",
-      "[CV 2/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=   9.4s\n",
-      "[CV 3/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.759 total time=  10.4s\n",
-      "[CV 3/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.758 total time=  10.2s\n",
-      "[CV 1/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=  12.7s\n",
-      "[CV 2/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=  13.2s\n"
+      "[CV 1/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
+      "[CV 2/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear[CV 1/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
+      "\n",
+      "[CV 3/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
+      "[CV 3/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear[CV 2/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
+      "\n",
+      "[CV 3/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.758 total time=  13.0s\n",
+      "[CV 1/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=  14.1s\n",
+      "[CV 2/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=  16.0s\n",
+      "[CV 1/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=  21.5s\n",
+      "[CV 3/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.759 total time=  21.9s\n",
+      "[CV 2/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=  28.3s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.9/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -123,14 +114,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.709 total time= 1.3min\n"
+      "[CV 2/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 2.3min\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.9/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -138,14 +129,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 1/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 1.3min\n"
+      "[CV 3/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 2.4min\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.9/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -153,14 +144,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 3/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.708 total time= 1.3min\n"
+      "[CV 1/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 2.4min\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.9/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -168,14 +161,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 1.4min\n"
+      "[CV 3/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.709 total time= 2.5min\n",
+      "[CV 1/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 2.5min\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.9/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -183,22 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 1/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 1.4min\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.9/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV 3/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.708 total time= 1.5min\n"
+      "[CV 2/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 2.5min\n"
      ]
     }
    ],
@@ -208,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,28 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "delay_df = df[df['ArrDel15'] > 0.5].sample(n=600)\n",
-    "ontime_df = df[df['ArrDel15'] <= 0.5].sample(n=400)\n",
+    "delay_df = df[df['ArrDel15'] > 0.5].sample(n=6000)\n",
+    "ontime_df = df[df['ArrDel15'] <= 0.5].sample(n=4000)\n",
     "fake_df = pd.concat([delay_df, ontime_df], ignore_index=True)\n",
     "\n",
-    "x = df.drop(columns=['ArrDel15'])\n",
-    "y = df[['ArrDel15']]\n",
+    "x = fake_df.drop(columns=['ArrDel15'])\n",
+    "y = fake_df[['ArrDel15']]\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=150)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "svm_pipeline = models.get_pipeline(ModelENUM.SVM)\n",
     "param_grid = [\n",
-    "    models.get_svm_param(gamma=['auto'], c_list=[0.1], coef0=[0.1], kernel=['rbf'])\n",
+    "    models.get_svm_param(gamma=[2], c_list=[1e-2], coef0=[1], kernel=['linear'])\n",
     "]\n",
     "grid_search = models.get_grid_search_cv(\n",
     "    pipeline=svm_pipeline, param_grid=param_grid, cv=2, n_jobs=20\n",
@@ -402,7 +381,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 121)\n",
+      "(1000, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.shape)\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -410,8 +408,10 @@
      "output_type": "stream",
      "text": [
       "Fitting 2 folds for each of 1 candidates, totalling 2 fits\n",
-      "[CV 2/2; 1/1] START svm__C=0.1, svm__coef0=0.1, svm__gamma=auto, svm__kernel=rbf\n",
-      "[CV 1/2; 1/1] START svm__C=0.1, svm__coef0=0.1, svm__gamma=auto, svm__kernel=rbf\n"
+      "[CV 1/2; 1/1] START svm__C=0.01, svm__gamma=2, svm__kernel=linear...............\n",
+      "[CV 1/2; 1/1] END svm__C=0.01, svm__gamma=2, svm__kernel=linear;, score=0.746 total time=   0.0s\n",
+      "[CV 2/2; 1/1] START svm__C=0.01, svm__gamma=2, svm__kernel=linear...............\n",
+      "[CV 2/2; 1/1] END svm__C=0.01, svm__gamma=2, svm__kernel=linear;, score=0.708 total time=   0.0s\n"
      ]
     }
    ],
